 * Add two samples Kolmogorov test

=== Bug fixes ===
 * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
 * #820 (Python distribution fails randomly when computing the PDF over a sample)
 * #822 (Incorect Matrix / point operations with cast)
 * #824 (Confusing behavior of NumericalSample::sort)

== 1.7 release (2016-01-27) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework
 * New parametrization of covariance models
 * Changed behaviour of ExponentialCauchy
 * KrigingAlgorithm rework

==== New classes ====
 * OptimizationSolver, OptimizationProblem
 * SLSQP, LBFGS, NelderMead optimization algorithms from NLopt
 * DiracCovarianceModel, TensorizedCovarianceModel
 * HMatrixParameters: support class for HMat
 * KarhunenLoeveP1Factory: Karhunen-Loeve decomposition of a covariance model using a P1 Lagrange interpolation
 * GeneralizedLinearModelAlgorithm, GeneralizedLinearModelResult: estimate parameters of a generalized linear model
 * BipartiteGraph: red/black graph
 * CumulativeDistributionNetwork: high dimensional distribution using a collection of (usually) small dimension
   distributions and a bipartite graph describing the interactions between these distributions
 * AdaptiveStieltjesAlgorithm: orthonormal polynomials wrt arbitrary measures using adaptive integration
 * MaximumLikelihoodFactory: generic maximum likelihood distribution estimation service

==== API changes ====
 * Removed BoundConstrainedAlgorithm class
 * Removed NearestPointAlgorithm class
 * Deprecated AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 * Deprecated (AbdoRackwitz|Cobyla|SQP|TNC)SpecificParameters classes
 * Replaced KrigingAlgorithm::[gs]etOptimizer methods by KrigingAlgorithm::[gs]etOptimizationSolver
 * Removed ConfidenceInterval class
 * Removed draw method to CovarianceModel
 * Added Distribution::[sg]etParameter parameter value accessors
 * Added Distribution::getParameterDescription parameter description accessor