@@ -44,6 +44,7 @@
  * #820 (Python distribution fails randomly when computing the PDF over a sample)
  * #822 (Incorect Matrix / point operations with cast)
  * #824 (Confusing behavior of NumericalSample::sort)
+ * #837 (TruncatedDistribution::setParameter segfaults)
 
 == 1.7 release (2016-01-27) == #release-1.7
 
